<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddNewReferrals">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/ImgBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:src="@drawable/ic_arrow_back"
            android:tint="@color/colorTextWhite" />

        <TextView
            android:id="@+id/TxtHeader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:gravity="center_vertical"
            android:text="Add Referral"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorTextWhite" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="60dp"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="40dp"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/TxtPatientInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/enter_Customer_contact_information"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/EdtCustomerName"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/Customer"
                        android:inputType="textPersonName"
                        android:maxLength="50" />

                </android.support.design.widget.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:theme="@style/TextLabel">

                        <EditText
                            android:id="@+id/EdtExtension"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:hint="Ext"
                            android:inputType="number"
                            android:maxLength="4"
                            android:text="+91" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:theme="@style/TextLabel">

                        <EditText
                            android:id="@+id/EdtContactNumber"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:hint="@string/contact_number"
                            android:inputType="number"
                            android:maxLength="10" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/EdtComment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_your_comment_optional"
                        android:inputType="text"
                        android:maxLines="10" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/EdtAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_address"
                        android:inputType="text"
                        android:maxLines="10" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/EdtState"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_state"
                        android:inputType="text"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/EdtCountry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_country"
                        android:inputType="text"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/EdtZip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_zipcode"
                        android:inputType="number"
                        android:maxLength="6" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edtborder">

                    <com.example.ab0034.servicefieldtrack.MaterialSpinner.MaterialSpinner
                        android:id="@+id/SpinnerCity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:hint="@string/select_city" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edtborder">

                    <com.example.ab0034.servicefieldtrack.MaterialSpinner.MaterialSpinner
                        android:id="@+id/SpinnerLanguage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:hint="@string/select_Language" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edtborder">

                    <com.example.ab0034.servicefieldtrack.MaterialSpinner.MaterialSpinner
                        android:id="@+id/SpinnerLead"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:hint="@string/select_Lead" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/LnrAddLead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/BtnSubmit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorPrimary"
                android:text="@string/submit_referal"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorTextWhite" />

            <Button
                android:id="@+id/BtnMakeChanges"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorPrimary"
                android:text="@string/save_changes"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorTextWhite"
                android:visibility="gone" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>